<resources>
    <string name="app_name">Coulisses</string>
    <string name="featured_spectacles">Featured Spectacles</string>
    <string name="show_all_spectacles">Show All Spectacles</string>
    <string name="spectacles_list">Spectacles List</string>
    <string name="reserve_now">Reserve Now</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="ticket_number">Ticket #%1$s</string>
    <string name="event">Event: %1$s</string>
    <string name="date_time">Date &amp; Time: %1$s at %2$s</string>
    <string name="location">Location: %1$s</string>
    <string name="category">Category: %1$s</string>
    <string name="price">Price: %1$.2f TND</string>
    <string name="reservation_complete">Reservation Complete!</string>
    <string name="thank_you">Thank you for your reservation</string>
    <string name="view_ticket">View Ticket</string>
    <string name="back_to_home">Back to Home</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>


</resources>